--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -1,7 +1,10 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+	width: 90%;
+	float: center;
 }
-html{
+html {
 	background-color: aliceblue;
 }
+
