--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -1,10 +1,20 @@
+/* reset selector */
+* {
+	margin: 0;
+	padding: 0;
+}
+/* body styling*/
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 	width: 90%;
-	float: center;
+	: center;
+	text-align: center;
+	double-border: 1px solid rebeccapurple;
 }
 html {
 	background-color: aliceblue;
 }
-
+footer{
+	border-top: 1px solid rebeccapurple;	
+}
