--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -3,6 +3,9 @@
 	margin: 0;
 	padding: 0;
 }
+body img {
+	float: left;
+}
 /* body styling*/
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -33,9 +36,9 @@ main h3{
 main p cite{
 	color: rebeccapurple;
 	font-weight: bold; 
+	font-style: normal;
 }
 footer p{
 	font-size: 90%;
 	font-weight: bold;
 }
-
