--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -13,9 +13,10 @@ body {
 	width: 90%;
 	justify-content: center;
 	text-align: center;
-	border-width: 3xp;
-	border-color: rebeccapurple;
 	border-style: double;
+	border-width: 5px;
+	border-color: rebeccapurple;
+	padding: 10px;
 }
 html {
 	background-color: aliceblue;
@@ -42,5 +43,6 @@ footer p{
 	font-size: 90%;
 	font-weight: bold;
 }
+
 
 
