--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -3,20 +3,20 @@
 	margin: 0;
 	padding: 0;
 }
-main img {
-	float: left;
-}
 /* body styling*/
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 	width: 90%;
-	justify-content: center;
-	text-align: center;
+	background-color: white;
+	margin: 10px auto;
 	border-style: double;
 	border-width: 5px;
 	border-color: rebeccapurple;
 	padding: 10px;
+}
+main img {
+	float: left;
 }
 html {
 	background-color: aliceblue;
@@ -43,6 +43,7 @@ footer p{
 	font-size: 90%;
 	font-weight: bold;
 }
+
 
 
 
