--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -32,7 +32,7 @@ main h1{
 main h2{
 	font-size: 125%;
 	clear: right;
-	margin: 10px;
+	margin-bottom: 10px;
 }
 main h3{
 	font-size: 115%;
@@ -50,3 +50,4 @@ footer p{
 main p{
 	margin-bottom: 10px;
 }
+
