--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -2,64 +2,67 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+}
+html {
+	background-color: aliceblue;
 }
 /* body styling*/
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 	width: 90%;
+	margin: 20px auto;
 	background-color: white;
-	margin: 10px auto;
 	border-style: double;
 	border-width: 5px;
 	border-color: rebeccapurple;
-	padding: 10px;
+	padding: 20px;
 }
 main {
-	padding: 10px;
+	padding: 20px;
 }
 main img {
 	float: left;
-}
-html {
-	background-color: aliceblue;
+	margin: 0 15px 10px 0;
 }
 footer{
 	border-top: 5px solid rebeccapurple;	
-	text-align: auto;
+	padding-top: 15px;
 }
 main h1{
 	font-size: 150%;
 	color: rebeccapurple;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
+	clear: both;
 }
 main h2{
 	font-size: 125%;
+	margin-bottom: 15px 0 10px;
 	clear: left;
-	margin-bottom: 10px;
-	text-align: auto;
 }
 main h3{
 	font-size: 115%;
-	margin-bottom: 10px;
+	margin-bottom: 10px 0;
 }
-main p cite{
+h1, h2, h3, p, blockquote, ul, li{
+	margin-bottom: 10px;	
+}
+ul ol {
+	padding-left: 20px;
+}
+cite{
 	color: rebeccapurple;
 	font-weight: bold; 
 	font-style: normal;
-	clear: left;
-	text-align: auto;
 }
 footer p{
 	font-size: 90%;
 	font-weight: bold;
-	text-align: auto;
+	text-align: center;
+	margin: 10px 0;
 }
 main p{
-	margin-bottom: 10px;
-	text-align: auto;
+	margin-top: 0;
 }
-
-
-
 
