Refactor CSS styles for layout and design improvements
Updated styles in main.css to improve layout and design.

--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -13,9 +13,10 @@ body {
     font-size: 100%;
 	width: 90%;
 	background-color: white;
-	border: 10px solid rebeccapurple
+	border: 15px solid rebeccapurple
 	border-style: double;
 	padding: 20px;
+	margin: 20px auto;
 }
 main {
 	padding: 20px;
@@ -63,6 +64,7 @@ footer p{
 main p{
 	margin-top: 0;
 }
+
 
 
 
