--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -13,7 +13,7 @@ body {
     font-size: 100%;
 	width: 90%;
 	background-color: white;
-	border: 15px solid rebeccapurple
+	border: 15px solid rebeccapurple;
 	border-style: double;
 	padding: 20px;
 	margin: 20px auto;
@@ -64,6 +64,7 @@ footer p{
 main p{
 	margin-top: 0;
 }
+
 
 
 
