--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -14,8 +14,7 @@ body {
 	background-color: white;
 	border: 15px solid rebeccapurple;
 	border-style: double;
-	padding: 20px;
-	margin: auto;
+	margin: 0 auto;
 }
 main {
 	padding: 20px;
@@ -63,6 +62,7 @@ footer p{
 main p{
 	margin-top: 0;
 }
+
 
 
 
