--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -15,6 +15,7 @@ body {
 	border: 15px solid rebeccapurple;
 	border-style: double;
 	margin: 0 auto;
+	padding-bottom: 20px;
 }
 main {
 	padding: 20px;
@@ -62,6 +63,7 @@ footer p{
 main p{
 	margin-top: 0;
 }
+
 
 
 
