--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -1,18 +1,24 @@
-/* reset selector */
+/* variables */
+:root {
+	--primary-color: rebeccapurple;
+	--accent-color: aliceblue;
+	--light: white;
+}
+/*reset selector */
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 /* html styling */
-html { background-color: aliceblue; }
+html { background-color: var(--accent-color); }
 /* body styling*/
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 	width: 90%;
-	background-color: white;
-	border: 15px solid rebeccapurple;
+	background-color: var(--light);
+	border: 15px solid var(--primary-color);
 	border-style: double;
 	margin: 0 auto;
 	padding: 20px;
@@ -25,12 +31,12 @@ main img {
 	margin: 0 15px 10px 0;
 }
 footer{
-	border-top: 5px solid rebeccapurple;	
+	border-top: 5px solid var(--primary-color);	
 	padding-top: 15px;
 }
 main h1{
 	font-size: 150%;
-	color: rebeccapurple;
+	color: var(--primary-color);
 	margin-bottom: 15px;
 	clear: both;
 }
@@ -50,7 +56,7 @@ ul ol {
 	padding-left: 20px;
 }
 cite{
-	color: rebeccapurple;
+	color: var(--primary-color);
 	font-weight: bold; 
 	font-style: normal;
 }
@@ -63,14 +69,3 @@ footer p{
 main p{
 	margin-top: 0;
 }
-
-
-
-
-
-
-
-
-
-
-
