--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -46,7 +46,7 @@ main h3{
 h1, h2, h3, p, blockquote, ul, li{
 	margin: 7px;
 }
-ul ol {
+ul, ol {
 	padding-left: 20px;
 }
 cite{
@@ -63,6 +63,7 @@ footer p{
 main p{
 	margin-top: 0;
 }
+
 
 
 
