--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -24,23 +24,21 @@ body {
 }
 main {
 	padding: 10px;
-}
-main img {
+ & img {
 	float: left;
 	margin: 0 15px 10px 0;
+	}
+  & p { margin-top: 0; 
+  }
 }
-footer{
-	border-top: 5px solid var(--primary-color);	
-	padding-top: 5px;
-}
-main h1{
+h1{
 	font-size: 150%;
 	color: var(--primary-color);
 }
-main h2{
+h2{
 	font-size: 125%;
 }
-main h3{
+h3{
 	font-size: 115%;
 }
 h1, h2, h3, p, blockquote, ul, li{
@@ -54,17 +52,13 @@ cite{
 	font-weight: bold; 
 	font-style: normal;
 }
-footer p{
+footer{
+	border-top: 5px solid var(--primary-color);	
+	padding-top: 5px;
+	& p{
 	font-size: 90%;
 	font-weight: bold;
 	text-align: center;
 	margin: 10px 0;
+	}
 }
-main p{
-	margin-top: 0;
-}
-
-
-
-
-
