--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -11,7 +11,8 @@
 	box-sizing: border-box;
 }
 /* html styling */
-html { background-color: var(--accent-color); }
+html { background-color: var(--accent-color);
+	   padding-bottom: 20px; }
 /* body styling*/
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -62,4 +63,5 @@ footer{
 	margin: 10px 0;
 	}
 }
+
 
