--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -23,15 +23,12 @@ body {
 	margin: 0 auto 20px auto;
 	padding: 20px;
 }
-main {
-	padding: 10px;
- & img {
+main { padding: 10px; }
+main img {
 	float: left;
 	margin: 0 15px 10px 0;
 	}
-  & p { margin-top: 0; 
-  }
-}
+main p { margin-top: 0; }
 h1{
 	font-size: 150%;
 	color: var(--primary-color);
@@ -56,12 +53,10 @@ cite{
 footer{
 	border-top: 5px solid var(--primary-color);	
 	padding-top: 5px;
-	& p{
+}
+footer p{
 	font-size: 90%;
 	font-weight: bold;
 	text-align: center;
 	margin: 10px 0;
-	}
 }
-
-
